# platform.adaptation.samsung_exynos.device-manager-plugin-exynos5433

./: CMakeLists.txt
hw/: backlight.c  led.c  shared.h
hw/display/: CMakeLists.txt  display.c
hw/display-x/: display.c
hw/ir/: ir.c
hw/led/: led.c
hw/touchscreen/: touchscreen.c
packaging/: device-manager-plugin-exynos5433.spec
packaging/hw/display/: display.c
packaging/hw/led/: led.c
