CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(device-manager-exynos5433 C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED dlog hwcommon)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_LIBRARY(led MODULE hw/led.c hw/shared.c)
SET_TARGET_PROPERTIES(led PROPERTIES PREFIX "")
INSTALL(TARGETS led DESTINATION ${LIB_INSTALL_DIR}/hw COMPONENT RuntimeLibraries)
